corectare inchidere tag

--- a/ListPage.xaml
+++ b/ListPage.xaml
@@ -10,7 +10,7 @@
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*"> />
+                <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <Button Text="Save"
                         Clicked="OnSaveButtonClicked"/>
