--- a/ListPage.xaml
+++ b/ListPage.xaml
@@ -18,5 +18,8 @@
                     Text="Delete"
                     Clicked="OnDeleteButtonClicked" />
         </Grid>
+        <Button Text="Add/Choose Item to buy" 
+                MaximumWidthRequest="300" 
+                Clicked="OnChooseButtonClicked"/>
     </StackLayout>
 </ContentPage>
