--- a/ListPage.xaml
+++ b/ListPage.xaml
@@ -18,6 +18,16 @@
                     Text="Delete"
                     Clicked="OnDeleteButtonClicked" />
         </Grid>
+
+        <ListView  x:Name="listView"                
+                   Margin="20">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextCell  Detail="{Binding Description}" />
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
         <Button Text="Add/Choose Item to buy" 
                 MaximumWidthRequest="300" 
                 Clicked="OnChooseButtonClicked"/>
