--- a/ShopEntryPage.xaml
+++ b/ShopEntryPage.xaml
@@ -3,10 +3,19 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Milea_Petrica_Lab7.ShopEntryPage"
              Title="ShopEntryPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Add Shop" Clicked="OnShopAddedClicked" />
+    </ContentPage.ToolbarItems>
+    
+    <ListView x:Name="listView" 
+              Margin="20" 
+              ItemSelected="OnListViewItemSelected">
+        <ListView.ItemTemplate>
+            <DataTemplate>
+                <TextCell Text="{Binding ShopName}" 
+                          Detail="{Binding Adress}" />
+            </DataTemplate>
+        </ListView.ItemTemplate>
+    </ListView>
 </ContentPage>
