9. Dorim ca aplicatia sa deschisa harsta si sa afiseze modul in care putem ajunge la adresa indicate a magazinului. Astfel in fisierul ShopPage.xmls adaugam un buton care va deschide harta:

--- a/ShopPage.xaml
+++ b/ShopPage.xaml
@@ -31,6 +31,13 @@
                         Grid.Column="0" 
                         MaximumWidthRequest="200"
                         Clicked="OnSaveButtonClicked" />
+                
+                <Button Text="Show on Map" 
+                        Grid.Column="1" 
+                        MaximumWidthRequest="200" 
+                        Clicked="OnShowMapButtonClicked">
+                </Button>
+                
             </Grid>
         </StackLayout>
     </ContentPage.Content>
